[gd_scene load_steps=3 format=3 uid="uid://n2i0p4ukf4c5"]

[ext_resource type="Theme" uid="uid://c2kxjsvf2fp5y" path="res://ui/theme/operation_theme.tres" id="1_fph6k"]
[ext_resource type="Script" path="res://ui/operation_window/operation_window.gd" id="2_1ku6c"]

[node name="OperationWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 42.0
offset_right = 12.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fph6k")
script = ExtResource("2_1ku6c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 395.0
offset_bottom = 488.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "競技の状況"

[node name="EventContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/EventContainer"]
layout_mode = 2
text = "競技名"

[node name="Event" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/EventContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 10
selected = 0
popup/item_0/text = "中1:水風船騎馬"
popup/item_0/id = 0
popup/item_1/text = "中2:酔いどれ 親父をつかまえて"
popup/item_1/id = 1
popup/item_2/text = "中3:国の破壊"
popup/item_2/id = 2
popup/item_3/text = "高1:合戦"
popup/item_3/id = 3
popup/item_4/text = "高2:騎馬戦"
popup/item_4/id = 4
popup/item_5/text = "高3:騎馬戦"
popup/item_5/id = 5
popup/item_6/text = "中1中2合同:玉入れしっぽ取り"
popup/item_6/id = 6
popup/item_7/text = "中3:いかだ流し"
popup/item_7/id = 7
popup/item_8/text = "高1高2合同:ぼーぼー"
popup/item_8/id = 8
popup/item_9/text = ":全校リレー"
popup/item_9/id = 9

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "試合数を表示するか？"

[node name="NeedMatchNumber" type="CheckButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "試合数"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2"]
layout_mode = 2
text = "第"

[node name="MatchNumber" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 1.0
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2"]
layout_mode = 2
text = "試合"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "対戦相手を表示するか？"

[node name="NeedMatchClass" type="CheckButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "対戦相手"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="First" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 7.0
value = 1.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4/HBoxContainer3"]
layout_mode = 2
text = "組"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4/HBoxContainer3"]
layout_mode = 2
text = "vs"

[node name="Second" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 7.0
value = 1.0
alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4/HBoxContainer3"]
layout_mode = 2
text = "組"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "タイマーを表示するか？"

[node name="NeedTimer" type="CheckButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "※これより下の設定は更新ボタンを押さなくても
勝手に更新されます"
horizontal_alignment = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "タイマーの種類"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer6"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "カウントダウン"
popup/item_0/id = 0
popup/item_1/text = "カウントアップ"
popup/item_1/id = 1

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer7"]
layout_mode = 2
text = "タイマーの初期値"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer7"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Min" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer7/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer7/HBoxContainer"]
layout_mode = 2
text = ":"

[node name="Sec" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer7/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 59.0
alignment = 1

[node name="HBoxContainer8" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer8"]
layout_mode = 2
text = "開始"

[node name="Stop" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer8"]
layout_mode = 2
text = "一時停止"

[node name="Reset" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer8"]
layout_mode = 2
text = "リセット"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "コメント"

[node name="Comment" type="TextEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="TotalScoreContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer"]
layout_mode = 2
text = "合計得点"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer"]
layout_mode = 2
columns = 2

[node name="Label1" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
layout_mode = 2
text = "1組"

[node name="Class1" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10000.0
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
layout_mode = 2
text = "2組"

[node name="Class2" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10000.0
alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
layout_mode = 2
text = "3組"

[node name="Class3" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10000.0
alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
layout_mode = 2
text = "4組"

[node name="Class4" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10000.0
alignment = 1

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
layout_mode = 2
text = "5組"

[node name="Class5" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10000.0
alignment = 1

[node name="Label6" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
layout_mode = 2
text = "6組"

[node name="Class6" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10000.0
alignment = 1

[node name="Label7" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
layout_mode = 2
text = "7組"

[node name="Class7" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10000.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/HBoxContainer"]
layout_mode = 2
text = "得点を????で隠すか？"

[node name="HideTotalScore" type="CheckButton" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/TotalScoreContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="UpdateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "更新"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer6/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer7/HBoxContainer/Min" to="." method="_on_initial_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer7/HBoxContainer/Sec" to="." method="_on_initial_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer8/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer8/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer8/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/UpdateButton" to="." method="_on_update_button_pressed"]
